err/lalita.err
Listing '.'...
Listing './bin'...
Compiling './bin/ircbot.py'...
***   File "./bin/ircbot.py", line 65
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/lalita'...
Listing './lib/python3.5/site-packages/lalita/core'...
Compiling './lib/python3.5/site-packages/lalita/core/dispatcher.py'...
***   File "./lib/python3.5/site-packages/lalita/core/dispatcher.py", line 212
    except TypeError, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lalita/core/tests'...
Listing './lib/python3.5/site-packages/lalita/core/tests/plugins'...
Compiling './lib/python3.5/site-packages/lalita/core/tests/test_dispatcher.py'...
***   File "./lib/python3.5/site-packages/lalita/core/tests/test_dispatcher.py", line 1028
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lalita/ircbot.py'...
***   File "./lib/python3.5/site-packages/lalita/ircbot.py", line 65
    except ImportError, e:
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lalita/plugins'...
Compiling './lib/python3.5/site-packages/lalita/plugins/moin_search.py'...
***   File "./lib/python3.5/site-packages/lalita/plugins/moin_search.py", line 75
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/lalita/plugins/randomer_utils'...
Compiling './lib/python3.5/site-packages/lalita/plugins/randomer_utils/randomer.py'...
***   File "./lib/python3.5/site-packages/lalita/plugins/randomer_utils/randomer.py", line 69
    print r,_counter
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lalita/plugins/tests'...
Compiling './lib/python3.5/site-packages/lalita/plugins/tests/helper.py'...
***   File "./lib/python3.5/site-packages/lalita/plugins/tests/helper.py", line 69
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/lalita/plugins/url.py'...
***   File "./lib/python3.5/site-packages/lalita/plugins/url.py", line 362
    print "batch #%d" % self.batch
                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/lalita-0.1.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
